...
              const SizedBox(height: 12),
              Align(
                alignment: Alignment.centerRight,
                child: TextButton(
                  onPressed: () => Get.toNamed(Routes.FORGOT_PASSWORD),
                  child: const Text(
                    "Forgot Password?",
                    style: TextStyle(color: AppTheme.primary),
                  ),
                ),
              ),
              const SizedBox(height: 32),
              SizedBox(
...
                    "Don't have an account?",
                    style: TextStyle(color: AppTheme.outline),
                  ),
                  TextButton(
                    onPressed: () => controller.goToRegister(),
                    child: const Text(
                      "Register",
                      style: TextStyle(
                        color: AppTheme.primary,
                        fontWeight: FontWeight.bold,
                      ),
                    ),
                  ),
...
